NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Shipment_Company__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Shipment_Company__c</fullName>
    <label>CTBR Shipment Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60120</fullName>
                <label>BRASPRESS TRANSPORTES URGENTES LTDA</label>
            </value>
            <value>
                <fullName>60358</fullName>
                <label>BRINGER DO BRASIL AGENC DE CARGAS NAC E INTER LTDA</label>
            </value>
            <value>
                <fullName>60762</fullName>
                <label>CLIENTE RETIRA</label>
            </value>
            <value>
                <fullName>60614</fullName>
                <label>EUCATUR-EMPRESA UNIAO CASCAVEL DE TRANSPOTES E TURISMO LTDA</label>
            </value>
            <value>
                <fullName>60442</fullName>
                <label>EXATA CARGO LTDA</label>
            </value>
            <value>
                <fullName>60784</fullName>
                <label>EXPRESSO SAO MIGUEL LTDA</label>
            </value>
            <value>
                <fullName>80667</fullName>
                <label>JAD LOGISTICA LTDA</label>
            </value>
            <value>
                <fullName>60514</fullName>
                <label>JAMEF TRANSPORTES LTDA</label>
            </value>
            <value>
                <fullName>80998</fullName>
                <label>PETRYMAR TRANSPORTES LTDA</label>
            </value>
            <value>
                <fullName>80952</fullName>
                <label>RODONAVES TRANSPORTES E ENCOMENDAS LTDA</label>
            </value>
            <value>
                <fullName>60319</fullName>
                <label>SVT TRANSPORTES</label>
            </value>
            <value>
                <fullName>80072</fullName>
                <label>TECMAR TRANSPORTES LTDA</label>
            </value>
            <value>
                <fullName>60372</fullName>
                <label>TRANSLOG TRANSPORTES LTDA ME</label>
            </value>
            <value>
                <fullName>80992</fullName>
                <label>TRANSPORTES VALMIR LTDA</label>
            </value>
            <value>
                <fullName>80982</fullName>
                <label>TROCA TRANSPORTES EIRELI</label>
            </value>
            <value>
                <fullName>60559</fullName>
                <label>TXS TRANSPORTES EIRELI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>