NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Shipment_Method__c</fullName>
    <label>CTBR Shipment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Same Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>