NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_ShipToLocation__c.field-meta.xml
<CustomField>
    <fullName>CTBR_ShipToLocation__c</fullName>
    <label>Ship To Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>