NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_SubtotalICMS__c.field-meta.xml
<CustomField>
    <fullName>CTBR_SubtotalICMS__c</fullName>
    <label>Subtotal ICMS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>