NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Tax__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Tax__c</fullName>
    <description>CAP-11749 : SAP Calculates Tax</description>
    <label>CTBR Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>