NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Taxation__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Taxation__c</fullName>
    <label>Taxation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>