NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_TaxObservation__c.field-meta.xml
<CustomField>
    <fullName>CTBR_TaxObservation__c</fullName>
    <label>Tax Observation</label>
    <length>254</length>
    <type>Text</type>
</CustomField>