NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_TotalPayable__c.field-meta.xml
<CustomField>
    <fullName>CTBR_TotalPayable__c</fullName>
    <label>Total Payable</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>