NATTQA-ENV/force-app/main/default/objects/Order/fields/CTM_Quote_contains_Non_Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>CTM_Quote_contains_Non_Stock_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote contains Non Stock Item</label>
    <type>Checkbox</type>
</CustomField>