NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Applicable_Taxes__c.field-meta.xml
<CustomField>
    <fullName>EC_Applicable_Taxes__c</fullName>
    <label>Applicable Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>