NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Dealer_Comments__c.field-meta.xml
<CustomField>
    <fullName>EC_Dealer_Comments__c</fullName>
    <label>Dealer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>