NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Dealer_Installed_Options__c.field-meta.xml
<CustomField>
    <fullName>EC_Dealer_Installed_Options__c</fullName>
    <label>Dealer Installed Options</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>