NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Fuel__c.field-meta.xml
<CustomField>
    <fullName>EC_Fuel__c</fullName>
    <label>Fuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>