NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Miscellaneous_Prep__c.field-meta.xml
<CustomField>
    <fullName>EC_Miscellaneous_Prep__c</fullName>
    <label>Miscellaneous Prep.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>