NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Non_Standard_Options__c.field-meta.xml
<CustomField>
    <fullName>EC_Non_Standard_Options__c</fullName>
    <label>Non-Standard Options</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>