NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Performance_Data__c.field-meta.xml
<CustomField>
    <fullName>EC_Performance_Data__c</fullName>
    <label>Performance Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>