NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Total_Installed_Packages__c.field-meta.xml
<CustomField>
    <fullName>EC_Total_Installed_Packages__c</fullName>
    <label>Total Installed Packages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>