NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Unit__c.field-meta.xml
<CustomField>
    <fullName>EC_Unit__c</fullName>
    <label>Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>