NATTQA-ENV/force-app/main/default/objects/Order/fields/EC_Warranty__c.field-meta.xml
<CustomField>
    <fullName>EC_Warranty__c</fullName>
    <label>Warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>