NATTQA-ENV/force-app/main/default/objects/Order/fields/Is_Direct_Sales__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct_Sales__c</fullName>
    <description>Indicates if the order is created from Quote belonging to Direct Sales record type</description>
    <formula>IF(AND(SBQQ__Quote__r.NATT_Quote_Record_Type_Developer_Name__c = &apos;NATT_Direct_Sales&apos;, SBQQ__Quote__r.SBQQ__Ordered__c = True),True,False)</formula>
    <label>Is Direct Sales?</label>
    <type>Checkbox</type>
</CustomField>