NATTQA-ENV/force-app/main/default/objects/Order/fields/Is_New_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Account?</label>
    <type>Checkbox</type>
</CustomField>