NATTQA-ENV/force-app/main/default/objects/Order/fields/NAC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NAC_Account_Number__c</fullName>
    <label>NAC Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>