NATTQA-ENV/force-app/main/default/objects/Order/fields/NAC_Billing_Delivery_Term__c.field-meta.xml
<CustomField>
    <fullName>NAC_Billing_Delivery_Term__c</fullName>
    <label>NAC Billing Delivery Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIL</fullName>
                <label>BIL - Bill to Customer</label>
            </value>
            <value>
                <fullName>PPD</fullName>
                <label>PPD - Prepaid Freight</label>
            </value>
            <value>
                <fullName>CPU</fullName>
                <label>CPU - Customer Pick Up</label>
            </value>
            <value>
                <fullName>COL</fullName>
                <label>COL - Collect</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <label>EXW - EX Works</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>CIF - COST INSURANCE AND FREIGHT</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Transport by sea</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Transport by rail</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Transport by road</label>
            </value>
            <value>
                <fullName>3PB</fullName>
                <label>3PB - FOB SHPPT 3RD PTY BL</label>
            </value>
            <value>
                <fullName>3PC</fullName>
                <label>3PC - Third Party Collect</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Transport by air</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Consignments by post</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Fixed transport installations</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Transport by inland waterway</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Own propulsion</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 - Customer Pick Up</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>A - Free Alongside Ship</label>
            </value>
            <value>
                <fullName>AIR</fullName>
                <label>AIR - Air Freight</label>
            </value>
            <value>
                <fullName>ALL</fullName>
                <label>ALL - Default</label>
            </value>
            <value>
                <fullName>AOS</fullName>
                <label>AOS - FOB Air Over Sea Collect</label>
            </value>
            <value>
                <fullName>AR1</fullName>
                <label>AR1 - FOB Ship Air Collect</label>
            </value>
            <value>
                <fullName>BRR</fullName>
                <label>BRR - Bypass Routing and Rating</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - Freight Collect</label>
            </value>
            <value>
                <fullName>CFR</fullName>
                <label>CFR - COST AND FREIGHT</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>CIP - CARRIAGE AND INSURANCE PAID TO</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>CPT - CARRIAGE PAID TO</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D - Delivered, Duty Paid</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>DAP - DELIVERED AT PLACE</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>DDP - DELIVERED DUTY PAID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>