NATTQA-ENV/force-app/main/default/objects/Order/fields/NAC_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NAC_Order_Type__c</fullName>
    <label>NAOCAP Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4G</fullName>
                <label>Stock order - 4G</label>
            </value>
            <value>
                <fullName>2G</fullName>
                <label>Emergency - 2G</label>
            </value>
            <value>
                <fullName>4D</fullName>
                <label>Stock order - 4D</label>
            </value>
            <value>
                <fullName>2D</fullName>
                <label>Emergency - 2D</label>
            </value>
            <value>
                <fullName>4P</fullName>
                <label>Stock order - 4P</label>
            </value>
            <value>
                <fullName>2P</fullName>
                <label>Emergency - 2P</label>
            </value>
            <value>
                <fullName>1P</fullName>
                <label>Unit Down - 1P</label>
            </value>
            <value>
                <fullName>1G</fullName>
                <label>Unit Down - 1G</label>
            </value>
            <value>
                <fullName>1D</fullName>
                <label>Unit Down - 1D</label>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>