NATTQA-ENV/force-app/main/default/objects/Order/fields/NAC_Order_Warehouse_Number__c.field-meta.xml
<CustomField>
    <fullName>NAC_Order_Warehouse_Number__c</fullName>
    <label>NAC Order Warehouse Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>