NATTQA-ENV/force-app/main/default/objects/Order/fields/NAC_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>NAC_Shipping_Method__c</fullName>
    <label>NAC Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BW1</fullName>
                <label>BW1 - BESTWAY</label>
            </value>
            <value>
                <fullName>CPU</fullName>
                <label>CPU - Customer Pick Up</label>
            </value>
            <value>
                <fullName>CR1</fullName>
                <label>CR1 - CUSTOMER ROUTING</label>
            </value>
            <value>
                <fullName>FX1</fullName>
                <label>FX1 - FEDEX - NEXT DAY AIR</label>
            </value>
            <value>
                <fullName>FX2</fullName>
                <label>FX2 - FEDEX - SECOND DAY AIR</label>
            </value>
            <value>
                <fullName>FX3</fullName>
                <label>FX3 - FEDEX - THIRD DAY AIR</label>
            </value>
            <value>
                <fullName>FXG</fullName>
                <label>FXG - FEDEX - GROUND</label>
            </value>
            <value>
                <fullName>FXX</fullName>
                <label>FXX - FEDEX - SATURDAY DELIVERY</label>
            </value>
            <value>
                <fullName>OF1</fullName>
                <label>OF1 - OCEAN FREIGHT</label>
            </value>
            <value>
                <fullName>AF1</fullName>
                <label>AF1 - AIR FREIGHT</label>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>BW</fullName>
            </value>
            <value>
                <fullName>PKU</fullName>
            </value>
            <value>
                <fullName>UPG</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>999</fullName>
            </value>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>ABF</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>AVE</fullName>
            </value>
            <value>
                <fullName>BCB</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>