NATTQA-ENV/force-app/main/default/objects/Order/fields/NAOCAP_Order_Ref__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Order_Ref__c</fullName>
    <formula>&apos;CAP&apos;+OrderNumber</formula>
    <label>Order Reference Number</label>
    <type>Text</type>
</CustomField>