NATTQA-ENV/force-app/main/default/objects/Order/fields/NAOCAP_Rush_Order_Charge__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Rush_Order_Charge__c</fullName>
    <label>NAOCAP Rush Order Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>