NATTQA-ENV/force-app/main/default/objects/Order/fields/NAOCAP_Ship_Complete__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Ship_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer chose Ship Complete</label>
    <type>Checkbox</type>
</CustomField>