NATTQA-ENV/force-app/main/default/objects/Order/fields/NAOCAP_Ship_To_Mailing_Name__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Ship_To_Mailing_Name__c</fullName>
    <description>NAOCAP Ship To Mailing Name</description>
    <label>Mailing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>