NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>