NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Activate_Time__c.field-meta.xml
<CustomField>
    <fullName>NATT_Activate_Time__c</fullName>
    <description>used in record triggered flow to set time for activation</description>
    <formula>CreatedDate + 0.00006</formula>
    <label>Activate Time</label>
    <type>DateTime</type>
</CustomField>