NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>