NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>NATT_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>