NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>