NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>NATT_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>