NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Bill_To_Address_JDE_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bill_To_Address_JDE_Number__c</fullName>
    <formula>NATT_Billing_Address__r.NATT_JDE_Address_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Address JDE Number</label>
    <type>Text</type>
</CustomField>