NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bill_To_Name__c</fullName>
    <formula>NATT_Billing_Address__r.NATT_JDE_Alpha_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Name</label>
    <type>Text</type>
</CustomField>