NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NATT Billing Address</label>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>