NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Billing_Address_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Billing_Address_Account_Id__c</fullName>
    <description>NATT</description>
    <formula>CASESAFEID(NATT_Billing_Address__r.NATT_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NATT Billing Address Account Id</label>
    <type>Text</type>
</CustomField>