NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_BluEdge_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Id__c</fullName>
    <description>used to send the id to jde and then eventually to tavant as the &quot;EMCC&quot; id and code for inventory</description>
    <label>Legacy BluEdge ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>