NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Boomi_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Boomi_Order_Status__c</fullName>
    <description>for integration with jde for natt order add and order update</description>
    <label>Boomi Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>OrderHeaderChangePending</fullName>
            </value>
            <value>
                <fullName>OrderAmendmentChangePending</fullName>
            </value>
            <value>
                <fullName>Main Product Number Change</fullName>
            </value>
            <value>
                <fullName>Migrated</fullName>
            </value>
            <value>
                <fullName>OrderHeaderChangeReviewPending</fullName>
                <isActive>false</isActive>
                <label>OrderHeaderChangeReviewPending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>