NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Carrier_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Carrier_Number__c</fullName>
    <description>Carrier number field. Added for CTM JDE integration purposes</description>
    <label>Carrier Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>