NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Change_Order_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Change_Order_Comments__c</fullName>
    <label>Change Order Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>