NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Competitive_Unit_Model__c.field-meta.xml
<CustomField>
    <fullName>NATT_Competitive_Unit_Model__c</fullName>
    <description>twin field from quote</description>
    <label>Competitive Unit Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Competitive_Unit_Model</valueSetName>
    </valueSet>
</CustomField>