NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Competitor_Model_Options__c.field-meta.xml
<CustomField>
    <fullName>NATT_Competitor_Model_Options__c</fullName>
    <description>twin field from quote</description>
    <label>Competitor Model Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>