NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Configured_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Configured_Unit_Code__c</fullName>
    <description>NATT - this is a twin field from quote and represents the part number for the base unit.</description>
    <label>Product Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>