NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contact_Email__c</fullName>
    <description>email of contact for B2B order (no contact object record stored)</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>