NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contact_Name__c</fullName>
    <description>name of contact for B2B order (no contact object record stored)</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>