NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>