NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Customer_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Market_Segment__c</fullName>
    <formula>TEXT(NATT_End_Customer__r.NATT_Market_Segment2__c)</formula>
    <label>Customer Market Segment</label>
    <type>Text</type>
</CustomField>