NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_CustomerBilltoCode__c.field-meta.xml
<CustomField>
    <fullName>NATT_CustomerBilltoCode__c</fullName>
    <formula>Account.NATT_JDE_Parts_Bill_To_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer #</label>
    <type>Text</type>
</CustomField>