NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>NATT_CustomerName__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>