NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Dealer_AR_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_AR_Code__c</fullName>
    <formula>Account.NATT_AR_Code_JDE_AR_Code__c</formula>
    <label>Dealer AR Code</label>
    <type>Text</type>
</CustomField>