NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Dealer_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Comments__c</fullName>
    <description>NATT</description>
    <label>Dealer Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>