NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Earliest_Scheduled_Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Earliest_Scheduled_Pick_Date__c</fullName>
    <label>Earliest Scheduled Pick Date</label>
    <summarizedField>OrderItem.NATT_Scheduled_Pick_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.NATT_Is_Base_Unit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>