NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT end customer</description>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (End Customer)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>