NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Freight_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Freight_Account_Number__c</fullName>
    <description>Customer&apos;s freight account number if using Bill To Customer Delivery Term.</description>
    <label>Freight Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>