NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>