NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_JDE_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Sales_Order_Number__c</fullName>
    <description>NATT</description>
    <externalId>true</externalId>
    <label>JDE Sales Order #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>