NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_JDE_SO__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_SO__c</fullName>
    <formula>&quot;JDE SO#: &quot; &amp; NATT_JDE_Sales_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Sales Order Number</label>
    <type>Text</type>
</CustomField>