NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_JDE_SO_Last_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_SO_Last_Line_Status__c</fullName>
    <description>NATT</description>
    <label>JDE SO Last Line Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>