NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_JdeOrderType__c.field-meta.xml
<CustomField>
    <fullName>NATT_JdeOrderType__c</fullName>
    <description>Order type code in JDE
1 = Unit Down
2 = Same Day
4 = Stock</description>
    <label>JDE Order Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>