NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_JdeOrderTypeName__c.field-meta.xml
<CustomField>
    <fullName>NATT_JdeOrderTypeName__c</fullName>
    <formula>IF(NATT_JdeOrderType__c == &apos;&apos;,&apos;&apos;,
IF(CONTAINS(NATT_JdeOrderType__c,&apos;1&apos;),&apos;Unit Down&apos;,
IF(CONTAINS(NATT_JdeOrderType__c,&apos;2&apos;),&apos;Same Day&apos;,
IF(CONTAINS(NATT_JdeOrderType__c,&apos;4&apos;),&apos;Stock&apos;,
IF(CONTAINS(NATT_JdeOrderType__c,&apos;C&apos;),&apos;Credit&apos;,
IF(CONTAINS(NATT_JdeOrderType__c,&apos;Y&apos;),&apos;Annual Return&apos;,&apos;&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>